Fix various compiler warnings https://bugs.webkit.org/show_bug.cgi?id=242711

Reviewed by Carlos Garcia Campos.

In particular, it's time to stop warning about new values of
AXNotification. These would be useful if they indicated a need to
implement something, but in practice all we wind up doing is ignoring
each one individually, which is not useful.

* Source/WebCore/accessibility/atspi/AXObjectCacheAtspi.cpp:
(WebCore::AXObjectCache::postPlatformNotification):
* Source/WebCore/html/InputType.cpp:
(WebCore::InputType::isValidValue const):
* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::texImage3DBase):
(WebCore::WebGLRenderingContextBase::texSubImage3DBase):
* Source/WebCore/platform/graphics/ImageBuffer.cpp:
(WebCore::ImageBuffer::drawPattern):

Canonical link: https://commits.webkit.org/252451@main