Source/WebCore/accessibility/atspi/AXObjectCacheAtspi.cpp
@@ -138,102 +138,10 @@ void AXObjectCache::postPlatformNotification(AXCoreObject* coreObject, AXNotific
         if (auto* descendant = coreObject->activeDescendant())
             platformHandleFocusedUIElementChanged(nullptr, descendant->node());
         break;
-    case AXAriaRoleChanged:
-        break;
-    case AXAutocorrectionOccured:
-        break;
     case AXChildrenChanged:
         coreObject->updateChildrenIfNecessary();
         break;
-    case AXFocusedUIElementChanged:
-        break;
-    case AXFrameLoadComplete:
-        break;
-    case AXIdAttributeChanged:
-        break;
-    case AXImageOverlayChanged:
-        break;
-    case AXLanguageChanged:
-        break;
-    case AXLayoutComplete:
-        break;
-    case AXLoadComplete:
-        break;
-    case AXNewDocumentLoadComplete:
-        break;
-    case AXPageScrolled:
-        break;
-    case AXSelectedTextChanged:
-        break;
-    case AXScrolledToAnchor:
-        break;
-    case AXLiveRegionCreated:
-        break;
-    case AXLiveRegionChanged:
-        break;
-    case AXMenuClosed:
-        break;
-    case AXMenuOpened:
-        break;
-    case AXRowCountChanged:
-        break;
-    case AXPressDidSucceed:
-        break;
-    case AXPressDidFail:
-        break;
-    case AXSortDirectionChanged:
-        break;
-    case AXTextChanged:
-        break;
-    case AXDraggingStarted:
-        break;
-    case AXDraggingEnded:
-        break;
-    case AXDraggingEnteredDropZone:
-        break;
-    case AXDraggingDropped:
-        break;
-    case AXDraggingExitedDropZone:
-        break;
-    case AXGrabbedStateChanged:
-        break;
-    case AXPositionInSetChanged:
-        break;
-    case AXDescribedByChanged:
-        break;
-    case AXHasPopupChanged:
-        break;
-    case AXSetSizeChanged:
-        break;
-    case AXLevelChanged:
-        break;
-    case AXMaximumValueChanged:
-        break;
-    case AXMinimumValueChanged:
-        break;
-    case AXMultiSelectableStateChanged:
-        break;
-    case AXIsAtomicChanged:
-        break;
-    case AXLiveRegionRelevantChanged:
-        break;
-    case AXLiveRegionStatusChanged:
-        break;
-    case AXOrientationChanged:
-        break;
-    case AXPlaceholderChanged:
-        break;
-    case AXColumnCountChanged:
-        break;
-    case AXColumnIndexChanged:
-        break;
-    case AXColumnSpanChanged:
-        break;
-    case AXRowIndexChanged:
-        break;
-    case AXRowSpanChanged:
-        break;
-    case AXDropEffectChanged:
+    default:
         break;
     }
 }
